<resources>
    <string name="app_name">MyCountApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Count</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="count">count</string>
    <string name="Toast">Toast</string>
    <string name="Random">Random</string>
    <string name="textview_string">A Random number between 1 and x</string>
    <string name="ranno">0</string>
</resources>